objects/Azure_B2C_Lead_Integration_Fields__mdt.object
<CustomObject>
    <fields>
        <fullName>areaMarketingNames__c</fullName>
        <label>areaMarketingNames</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactWithPhone__c</fullName>
        <label>contactWithPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>districts__c</fullName>
        <label>districts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <label>firstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <label>lastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadIDPortal__c</fullName>
        <label>leadIDPortal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadOrigin__c</fullName>
        <label>leadOrigin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>localities__c</fullName>
        <label>localities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketingEmailAllowed__c</fullName>
        <label>marketingEmailAllowed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacyAgreementAccepted__c</fullName>
        <label>privacyAgreementAccepted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>projectBusinessSegment__c</fullName>
        <label>projectBusinessSegment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>projectNames__c</fullName>
        <label>projectNames</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Azure B2C Lead Integration Fields</label>
    <pluralLabel>Azure B2C Lead Integration Fields</pluralLabel>
</CustomObject>